discussion/kv_engine/173142/173142_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50984: Remove num-item-based checkpoint creation

Since Neo we have an implicit upper bound on the max number of
checkpoints (per bucket) that is logically given by (CMQuota /
CheckpointMaxSize).

Still, there are code paths that interfere with that and possibly break
that invariant. One of those is chk_max_items, which triggers checkpoint
creation when the user-defined max num of items has been queued into a
single checkpoint. Here we remove that trigger.

Change-Id: I2c49065a3d1b05493df8ce9865982d6393f9373f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-26 08:57:41.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-26 09:29:30.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38337/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/xattr/blob.cc:96:40:
error: "buf" is a private member of "cb::sized_buffer<char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38337/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16989/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5: error: no matching function for call to "checkgtfn" [clang-diagnostic-error]
    checkgt(firstCkptNumItems, 5ull, "");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:104:5: note: expanded from macro "checkgt"
    checkgtfn(expected, actual, msg, __FILE__, __LINE__)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:83:13: note: candidate template ignored: deduced conflicting types for parameter "T" ("unsigned long" vs. "unsigned long long")
static void checkgtfn(T exp, T got, const char *msg, const char *file,
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16989/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5:
error: no matching function for call to "checkgtfn" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16989/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45638/ : FAILURE

Compile error at ..\kv_engine\xattr\blob.cc(96): error C2248: "cb::sized_buffer<char>::buf": cannot access private member declared in class "cb::sized_buffer<char>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45638/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6649/ : FAILURE

Compile error at [2022-04-26T09:20:22.795Z] ../kv_engine/xattr/blob.cc:96:40:
error: "buf" is a private member of "cb::sized_buffer<char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6649/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19118/ : FAILURE

Compile error at [2022-04-26T09:21:07.651Z] ../kv_engine/xattr/blob.cc:96:40:
error: ?cb::sized_buffer<char>::value_type* cb::sized_buffer<char>::buf? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19118/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18774/ : FAILURE

Compile error at [2022-04-26T09:23:16.303Z] ../kv_engine/xattr/blob.cc:96:40:
error: ?cb::sized_buffer<char>::value_type* cb::sized_buffer<char>::buf? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18774/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27192/ : FAILURE

Compile error at [2022-04-26T09:29:13.158Z] ../kv_engine/xattr/blob.cc:96:40:
error: "buf" is a private member of "cb::sized_buffer<char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27192/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19818/ : FAILURE

Compile error at [2022-04-26T09:25:05.150Z] ../kv_engine/xattr/blob.cc:96:40:
error: "buf" is a private member of "cb::sized_buffer<char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19818/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17902/ : FAILURE

Compile error at [2022-04-26T09:02:11.758Z] ../kv_engine/xattr/blob.cc:96:40:
error: "buf" is a private member of "cb::sized_buffer<char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17902/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6742/ : FAILURE

Compile error at [2022-04-26T08:59:19.413Z] ../kv_engine/xattr/blob.cc:96:40:
error: ?cb::sized_buffer<char>::value_type* cb::sized_buffer<char>::buf? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6742/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15957/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
